# FilesMergeSort

./: CMakeLists.txt  README.md  main.cc
classes/: coordinator.cc  file_handler.cc
include/: coordinator.h  event.h  file_handler.h
test_utils/: data_gen.cc
unit_tests/: coordinator_test.cc  file_handler_test.cc  system_test.cc
